# Evolving-Alpha

./: .gitignore  Makefile  PROJECT_STATE.md  ROADMAP.md  pyproject.toml  后续开发文档.md  轮回.docx
apps/api/: editing.py  events.py  graph_runtime.py  main.py
apps/web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
docs/findings/: 2026-06-06-real-data-hch-vs-hexpert.md
scripts/: sample_run.py  smoke_compare.py  smoke_deepseek_agent.py  snapshot_fixtures.py
src/youzi_agent/: __init__.py  cli.py  graph.py  reducers.py  reporting.py  state.py
tests/: conftest.py  test_agent_integration.py  test_baselines.py  test_cache.py  test_capture.py  test_cli.py  test_cli_auto_resume.py  test_compare.py  test_compare_real_seeds.py  test_credit.py  test_cycle.py  test_doctrine.py  test_e2e.py  test_edit_log.py  test_engine.py  test_features_echelon.py  test_features_sentiment.py  test_firewall.py  test_graph.py  test_harness_serialize.py  test_inner_loop.py  test_inner_loop_real_seeds.py  test_loader_real_seeds.py  test_manager.py  test_memory_item.py  test_memory_store.py  test_merge_credit.py  test_metatools.py  test_metrics.py  test_metrics_fill.py  test_ohlcv_fallback.py  test_oracle.py  test_parse.py  test_pit_e2e.py  test_refiner.py  test_refiner_prompt.py  test_refiner_real_seeds.py  test_regime.py  test_registry.py  test_reporting.py  (+23 more)
tests/test_data/: test_akshare_client.py  test_cache.py
tests/test_llm/: test_schemas.py
youzi/: config.py
youzi/agent/: agent.py  (+2 more)
youzi_web/: app.py  data_access.py
(+145 files in other folders)
